# Cmake-Example

./: CMakeLists.txt  README.md
src/: Math.cpp  Math.h  main.cpp
test/: test1.cpp
